Fix sidebar on mobile
sidebar did not collapse properly on mobile

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -31,7 +31,7 @@
 }
 
 body.close .sidebar {
-  transform: translateX(-100%);
+  transform: translateX(-200%);
 }
 
 .app-sub-sidebar li:before {
